lib/Anarres/Mud/Driver/Compiler/Parse.output
Conflicts:
----------
Conflict in state 36 between rule 164 and token '.' resolved as reduce.
Conflict in state 36 between rule 164 and token '+' resolved as reduce.
Conflict in state 37 between rule 163 and token '.' resolved as reduce.
Conflict in state 37 between rule 163 and token '+' resolved as shift.
Conflict in state 201 between rule 106 and token L_RSH resolved as reduce.
Conflict in state 201 between rule 106 and token '%' resolved as shift.
Conflict in state 201 between rule 106 and token '*' resolved as shift.
Conflict in state 201 between rule 106 and token '+' resolved as shift.
Conflict in state 201 between rule 106 and token L_LSH resolved as reduce.
Conflict in state 201 between rule 106 and token '-' resolved as shift.
Conflict in state 201 between rule 106 and token '.' resolved as shift.
Conflict in state 201 between rule 106 and token '/' resolved as shift.
Conflict in state 202 between rule 110 and token L_RSH resolved as reduce.
Conflict in state 202 between rule 110 and token '%' resolved as reduce.
Conflict in state 202 between rule 110 and token '*' resolved as reduce.
Conflict in state 202 between rule 110 and token '+' resolved as reduce.
Conflict in state 202 between rule 110 and token L_LSH resolved as reduce.
Conflict in state 202 between rule 110 and token '-' resolved as reduce.
Conflict in state 202 between rule 110 and token '.' resolved as reduce.
Conflict in state 202 between rule 110 and token '/' resolved as reduce.
Conflict in state 203 between rule 107 and token L_RSH resolved as reduce.
Conflict in state 203 between rule 107 and token '%' resolved as shift.
Conflict in state 203 between rule 107 and token '*' resolved as shift.
Conflict in state 203 between rule 107 and token '+' resolved as shift.
Conflict in state 203 between rule 107 and token L_LSH resolved as reduce.
Conflict in state 203 between rule 107 and token '-' resolved as shift.
Conflict in state 203 between rule 107 and token '.' resolved as reduce.
Conflict in state 203 between rule 107 and token '/' resolved as shift.
Conflict in state 204 between rule 112 and token L_RSH resolved as reduce.
Conflict in state 204 between rule 112 and token '%' resolved as reduce.
Conflict in state 204 between rule 112 and token '*' resolved as reduce.
Conflict in state 204 between rule 112 and token '+' resolved as reduce.
Conflict in state 204 between rule 112 and token L_LSH resolved as reduce.
Conflict in state 204 between rule 112 and token '-' resolved as reduce.
Conflict in state 204 between rule 112 and token '.' resolved as reduce.
Conflict in state 204 between rule 112 and token '/' resolved as reduce.
Conflict in state 205 between rule 108 and token L_RSH resolved as reduce.
Conflict in state 205 between rule 108 and token '%' resolved as shift.
Conflict in state 205 between rule 108 and token '*' resolved as shift.
Conflict in state 205 between rule 108 and token '+' resolved as reduce.
Conflict in state 205 between rule 108 and token L_LSH resolved as reduce.
Conflict in state 205 between rule 108 and token '-' resolved as reduce.
Conflict in state 205 between rule 108 and token '.' resolved as reduce.
Conflict in state 205 between rule 108 and token '/' resolved as shift.
Conflict in state 206 between rule 105 and token L_RSH resolved as reduce.
Conflict in state 206 between rule 105 and token '%' resolved as shift.
Conflict in state 206 between rule 105 and token '*' resolved as shift.
Conflict in state 206 between rule 105 and token '+' resolved as shift.
Conflict in state 206 between rule 105 and token L_LSH resolved as reduce.
Conflict in state 206 between rule 105 and token '-' resolved as shift.
Conflict in state 206 between rule 105 and token '.' resolved as shift.
Conflict in state 206 between rule 105 and token '/' resolved as shift.
Conflict in state 207 between rule 109 and token L_RSH resolved as reduce.
Conflict in state 207 between rule 109 and token '%' resolved as shift.
Conflict in state 207 between rule 109 and token '*' resolved as shift.
Conflict in state 207 between rule 109 and token '+' resolved as reduce.
Conflict in state 207 between rule 109 and token L_LSH resolved as reduce.
Conflict in state 207 between rule 109 and token '-' resolved as reduce.
Conflict in state 207 between rule 109 and token '.' resolved as reduce.
Conflict in state 207 between rule 109 and token '/' resolved as shift.
Conflict in state 208 between rule 111 and token L_RSH resolved as reduce.
Conflict in state 208 between rule 111 and token '%' resolved as reduce.
Conflict in state 208 between rule 111 and token '*' resolved as reduce.
Conflict in state 208 between rule 111 and token '+' resolved as reduce.
Conflict in state 208 between rule 111 and token L_LSH resolved as reduce.
Conflict in state 208 between rule 111 and token '-' resolved as reduce.
Conflict in state 208 between rule 111 and token '.' resolved as reduce.
Conflict in state 208 between rule 111 and token '/' resolved as reduce.
Conflict in state 237 between rule 96 and token L_LAND resolved as reduce.
Conflict in state 237 between rule 96 and token '&' resolved as reduce.
Conflict in state 237 between rule 96 and token L_LOR resolved as reduce.
Conflict in state 237 between rule 96 and token '|' resolved as reduce.
Conflict in state 237 between rule 96 and token '^' resolved as reduce.
Conflict in state 239 between rule 93 and token L_LAND resolved as reduce.
Conflict in state 239 between rule 93 and token '&' resolved as shift.
Conflict in state 239 between rule 93 and token L_LOR resolved as reduce.
Conflict in state 239 between rule 93 and token '|' resolved as shift.
Conflict in state 239 between rule 93 and token '^' resolved as shift.
Conflict in state 240 between rule 92 and token L_LAND resolved as shift.
Conflict in state 240 between rule 92 and token '&' resolved as shift.
Conflict in state 240 between rule 92 and token L_LOR resolved as reduce.
Conflict in state 240 between rule 92 and token '|' resolved as shift.
Conflict in state 240 between rule 92 and token '^' resolved as shift.
Conflict in state 241 between rule 94 and token L_LAND resolved as reduce.
Conflict in state 241 between rule 94 and token '&' resolved as shift.
Conflict in state 241 between rule 94 and token L_LOR resolved as reduce.
Conflict in state 241 between rule 94 and token '|' resolved as reduce.
Conflict in state 241 between rule 94 and token '^' resolved as shift.
Conflict in state 242 between rule 95 and token L_LAND resolved as reduce.
Conflict in state 242 between rule 95 and token '&' resolved as shift.
Conflict in state 242 between rule 95 and token L_LOR resolved as reduce.
Conflict in state 242 between rule 95 and token '|' resolved as reduce.
Conflict in state 242 between rule 95 and token '^' resolved as reduce.
Conflict in state 243 between rule 102 and token L_GE resolved as reduce.
Conflict in state 243 between rule 102 and token L_EQ resolved as reduce.
Conflict in state 243 between rule 102 and token L_LE resolved as reduce.
Conflict in state 243 between rule 102 and token L_NE resolved as reduce.
Conflict in state 243 between rule 102 and token '<' resolved as reduce.
Conflict in state 243 between rule 102 and token '>' resolved as reduce.
Conflict in state 244 between rule 99 and token L_GE resolved as shift.
Conflict in state 244 between rule 99 and token L_EQ resolved as reduce.
Conflict in state 244 between rule 99 and token L_LE resolved as shift.
Conflict in state 244 between rule 99 and token L_NE resolved as reduce.
Conflict in state 244 between rule 99 and token '<' resolved as shift.
Conflict in state 244 between rule 99 and token '>' resolved as shift.
Conflict in state 245 between rule 103 and token L_GE resolved as reduce.
Conflict in state 245 between rule 103 and token L_EQ resolved as reduce.
Conflict in state 245 between rule 103 and token L_LE resolved as reduce.
Conflict in state 245 between rule 103 and token L_NE resolved as reduce.
Conflict in state 245 between rule 103 and token '<' resolved as reduce.
Conflict in state 245 between rule 103 and token '>' resolved as reduce.
Conflict in state 246 between rule 98 and token L_GE resolved as shift.
Conflict in state 246 between rule 98 and token L_EQ resolved as reduce.
Conflict in state 246 between rule 98 and token L_LE resolved as shift.
Conflict in state 246 between rule 98 and token L_NE resolved as reduce.
Conflict in state 246 between rule 98 and token '<' resolved as shift.
Conflict in state 246 between rule 98 and token '>' resolved as shift.
Conflict in state 247 between rule 100 and token L_GE resolved as reduce.
Conflict in state 247 between rule 100 and token L_EQ resolved as reduce.
Conflict in state 247 between rule 100 and token L_LE resolved as reduce.
Conflict in state 247 between rule 100 and token L_NE resolved as reduce.
Conflict in state 247 between rule 100 and token '<' resolved as reduce.
Conflict in state 247 between rule 100 and token '>' resolved as reduce.
Conflict in state 248 between rule 101 and token L_GE resolved as reduce.
Conflict in state 248 between rule 101 and token L_EQ resolved as reduce.
Conflict in state 248 between rule 101 and token L_LE resolved as reduce.
Conflict in state 248 between rule 101 and token L_NE resolved as reduce.
Conflict in state 248 between rule 101 and token '<' resolved as reduce.
Conflict in state 248 between rule 101 and token '>' resolved as reduce.
Conflict in state 294 between rule 51 and token L_ELSE resolved as shift.

Rules:
------
0:	$start -> all $end
1:	all -> program
2:	program -> program definition
3:	program -> /* empty */
4:	definition -> inheritance
5:	definition -> global_decl
6:	definition -> function
7:	definition -> prototype
8:	inheritance -> L_INHERIT string_const ';'
9:	identifier -> L_IDENTIFIER
10:	function_declarator -> star_list identifier '(' arguments ')'
11:	variable_declarator -> star_list identifier
12:	variable_declarator_list -> variable_declarator
13:	variable_declarator_list -> variable_declarator_list ',' variable_declarator
14:	variable_declarator_init -> variable_declarator
15:	variable_declarator_init -> variable_declarator '=' exp
16:	variable_declarator_list_init -> variable_declarator_init
17:	variable_declarator_list_init -> variable_declarator_list_init ',' variable_declarator_init
18:	function_prologue -> type_modifier_list type_specifier function_declarator
19:	prototype -> function_prologue ';'
20:	function -> function_prologue block
21:	@1-1 -> /* empty */
22:	@2-3 -> /* empty */
23:	block -> '{' @1-1 local_decls @2-3 statement_list '}'
24:	statement_list -> /* empty */
25:	statement_list -> statement_list statement
26:	statement_list -> error ';'
27:	statement -> list_exp ';'
28:	statement -> block
29:	statement -> L_IF '(' nv_list_exp ')' statement opt_else
30:	@3-1 -> /* empty */
31:	@4-3 -> /* empty */
32:	statement -> L_DO @3-1 statement @4-3 L_WHILE '(' nv_list_exp ')' ';'
33:	@5-4 -> /* empty */
34:	statement -> L_WHILE '(' nv_list_exp ')' @5-4 statement
35:	@6-8 -> /* empty */
36:	statement -> L_FOR '(' opt_list_exp ';' opt_nv_list_exp ';' opt_list_exp ')' @6-8 statement
37:	@7-6 -> /* empty */
38:	statement -> L_FOREACH '(' lvalue L_IN exp ')' @7-6 statement
39:	statement -> L_RLIMITS '(' nv_list_exp ';' nv_list_exp ')' statement
40:	statement -> L_TRY block L_CATCH '(' lvalue ')' block
41:	statement -> L_CATCH block
42:	@8-4 -> /* empty */
43:	statement -> L_SWITCH '(' nv_list_exp ')' @8-4 block
44:	statement -> L_CASE exp ':'
45:	statement -> L_CASE exp L_RANGE exp ':'
46:	statement -> L_DEFAULT ':'
47:	statement -> L_BREAK ';'
48:	statement -> L_CONTINUE ';'
49:	statement -> L_RETURN opt_nv_list_exp ';'
50:	statement -> ';'
51:	opt_else -> /* empty */
52:	opt_else -> L_ELSE statement
53:	list_exp -> exp
54:	list_exp -> list_exp ',' exp
55:	opt_list_exp -> /* empty */
56:	opt_list_exp -> list_exp
57:	nv_list_exp -> exp
58:	opt_nv_list_exp -> /* empty */
59:	opt_nv_list_exp -> nv_list_exp
60:	arg_list -> exp
61:	arg_list -> arg_list ',' exp
62:	opt_arg_list -> /* empty */
63:	opt_arg_list -> arg_list
64:	opt_arg_list_comma -> /* empty */
65:	opt_arg_list_comma -> arg_list
66:	opt_arg_list_comma -> arg_list ','
67:	assoc_exp -> exp ':' exp
68:	assoc_arg_list -> assoc_exp
69:	assoc_arg_list -> assoc_arg_list ',' assoc_exp
70:	opt_assoc_arg_list_comma -> /* empty */
71:	opt_assoc_arg_list_comma -> assoc_arg_list
72:	opt_assoc_arg_list_comma -> assoc_arg_list ','
73:	function_name -> identifier
74:	function_name -> L_COLONCOLON identifier
75:	function_name -> identifier L_COLONCOLON identifier
76:	function_name -> L_EFUN L_COLONCOLON identifier
77:	lvalue -> array_exp
78:	exp -> cond_exp
79:	exp -> lvalue '=' exp
80:	exp -> lvalue L_PLUS_EQ exp
81:	exp -> lvalue L_MINUS_EQ exp
82:	exp -> lvalue L_DIV_EQ exp
83:	exp -> lvalue L_TIMES_EQ exp
84:	exp -> lvalue L_MOD_EQ exp
85:	exp -> lvalue L_AND_EQ exp
86:	exp -> lvalue L_OR_EQ exp
87:	exp -> lvalue L_XOR_EQ exp
88:	exp -> lvalue L_DOT_EQ exp
89:	cond_exp -> logical_exp
90:	cond_exp -> logical_exp '?' list_exp ':' cond_exp
91:	logical_exp -> compare_exp
92:	logical_exp -> logical_exp L_LOR logical_exp
93:	logical_exp -> logical_exp L_LAND logical_exp
94:	logical_exp -> logical_exp '|' logical_exp
95:	logical_exp -> logical_exp '^' logical_exp
96:	logical_exp -> logical_exp '&' logical_exp
97:	compare_exp -> arith_exp
98:	compare_exp -> compare_exp L_EQ compare_exp
99:	compare_exp -> compare_exp L_NE compare_exp
100:	compare_exp -> compare_exp '<' compare_exp
101:	compare_exp -> compare_exp '>' compare_exp
102:	compare_exp -> compare_exp L_LE compare_exp
103:	compare_exp -> compare_exp L_GE compare_exp
104:	arith_exp -> prefix_exp
105:	arith_exp -> arith_exp L_LSH arith_exp
106:	arith_exp -> arith_exp L_RSH arith_exp
107:	arith_exp -> arith_exp '.' arith_exp
108:	arith_exp -> arith_exp '+' arith_exp
109:	arith_exp -> arith_exp '-' arith_exp
110:	arith_exp -> arith_exp '*' arith_exp
111:	arith_exp -> arith_exp '/' arith_exp
112:	arith_exp -> arith_exp '%' arith_exp
113:	prefix_exp -> postfix_exp
114:	prefix_exp -> L_INC prefix_exp
115:	prefix_exp -> L_DEC prefix_exp
116:	prefix_exp -> '!' prefix_exp
117:	prefix_exp -> '~' prefix_exp
118:	prefix_exp -> '+' prefix_exp
119:	prefix_exp -> '-' prefix_exp
120:	postfix_exp -> array_exp
121:	postfix_exp -> postfix_exp L_INC
122:	postfix_exp -> postfix_exp L_DEC
123:	array_exp -> basic_exp
124:	array_exp -> array_exp '[' opt_endrange nv_list_exp ']'
125:	array_exp -> array_exp '[' opt_endrange nv_list_exp L_RANGE opt_endrange nv_list_exp ']'
126:	opt_endrange -> /* empty */
127:	opt_endrange -> '<'
128:	basic_exp -> L_NIL
129:	basic_exp -> string
130:	basic_exp -> integer
131:	basic_exp -> array
132:	basic_exp -> mapping
133:	basic_exp -> closure
134:	basic_exp -> identifier
135:	basic_exp -> L_PARAMETER
136:	basic_exp -> '$' '(' identifier ')'
137:	basic_exp -> '(' list_exp ')'
138:	basic_exp -> function_name '(' opt_arg_list ')'
139:	basic_exp -> L_SSCANF '(' exp lvalue_list ')'
140:	basic_exp -> L_CATCH '(' list_exp ')'
141:	basic_exp -> array_exp L_ARROW identifier '(' opt_arg_list ')'
142:	lvalue_list -> /* empty */
143:	lvalue_list -> lvalue_list ',' lvalue
144:	global_decl -> type_modifier_list type_specifier variable_declarator_list ';'
145:	local_decls -> /* empty */
146:	local_decls -> local_decls local_decl
147:	local_decl -> type_specifier variable_declarator_list_init ';'
148:	arguments -> /* empty */
149:	arguments -> L_VOID
150:	arguments -> argument_list
151:	arguments -> argument_list L_ELLIPSIS
152:	argument_list -> argument
153:	argument_list -> argument_list ',' argument
154:	argument -> type_specifier variable_declarator
155:	type_modifier_list -> /* empty */
156:	type_modifier_list -> L_TYPE_MODIFIER type_modifier_list
157:	type_specifier -> L_BASIC_TYPE
158:	type_specifier -> L_VOID
159:	star_list -> /* empty */
160:	star_list -> star_list '*'
161:	star_list -> star_list '#'
162:	string_const -> string
163:	string_const -> string_const '.' string_const
164:	string_const -> string_const '+' string_const
165:	string_const -> integer
166:	string -> L_STRING
167:	string -> string L_STRING
168:	integer -> L_INTEGER
169:	integer -> L_HEXINTEGER
170:	integer -> L_CHARACTER
171:	array -> L_ARRAY_START opt_arg_list_comma L_ARRAY_END
172:	mapping -> L_MAP_START opt_assoc_arg_list_comma L_MAP_END
173:	closure -> L_FUNCTION_START list_exp L_FUNCTION_END

States:
-------
State 0:

	$start -> . all $end	(Rule 0)

	$default	reduce using rule 3 (program)

	all	go to state 1
	program	go to state 2

State 1:

	$start -> all . $end	(Rule 0)

	$end	shift, and go to state 3

State 2:

	all -> program .	(Rule 1)
	program -> program . definition	(Rule 2)

	L_INHERIT	shift, and go to state 4
	L_TYPE_MODIFIER	shift, and go to state 7

	$end	reduce using rule 1 (all)
	$default	reduce using rule 155 (type_modifier_list)

	function	go to state 8
	type_modifier_list	go to state 10
	global_decl	go to state 9
	prototype	go to state 11
	inheritance	go to state 5
	definition	go to state 12
	function_prologue	go to state 6

State 3:

	$start -> all $end .	(Rule 0)

	$default	accept

State 4:

	inheritance -> L_INHERIT . string_const ';'	(Rule 8)

	L_CHARACTER	shift, and go to state 18
	L_HEXINTEGER	shift, and go to state 19
	L_INTEGER	shift, and go to state 15
	L_STRING	shift, and go to state 17

	string	go to state 13
	integer	go to state 14
	string_const	go to state 16

State 5:

	definition -> inheritance .	(Rule 4)

	$default	reduce using rule 4 (definition)

State 6:

	prototype -> function_prologue . ';'	(Rule 19)
	function -> function_prologue . block	(Rule 20)

	';'	shift, and go to state 20
	'{'	shift, and go to state 21

	block	go to state 22

State 7:

	type_modifier_list -> L_TYPE_MODIFIER . type_modifier_list	(Rule 156)

	L_TYPE_MODIFIER	shift, and go to state 7

	$default	reduce using rule 155 (type_modifier_list)

	type_modifier_list	go to state 23

State 8:

	definition -> function .	(Rule 6)

	$default	reduce using rule 6 (definition)

State 9:

	definition -> global_decl .	(Rule 5)

	$default	reduce using rule 5 (definition)

State 10:

	function_prologue -> type_modifier_list . type_specifier function_declarator	(Rule 18)
	global_decl -> type_modifier_list . type_specifier variable_declarator_list ';'	(Rule 144)

	L_BASIC_TYPE	shift, and go to state 24
	L_VOID	shift, and go to state 26

	type_specifier	go to state 25

State 11:

	definition -> prototype .	(Rule 7)

	$default	reduce using rule 7 (definition)

State 12:

	program -> program definition .	(Rule 2)

	$default	reduce using rule 2 (program)

State 13:

	string_const -> string .	(Rule 162)
	string -> string . L_STRING	(Rule 167)

	L_STRING	shift, and go to state 27

	$default	reduce using rule 162 (string_const)

State 14:

	string_const -> integer .	(Rule 165)

	$default	reduce using rule 165 (string_const)

State 15:

	integer -> L_INTEGER .	(Rule 168)

	$default	reduce using rule 168 (integer)

State 16:

	inheritance -> L_INHERIT string_const . ';'	(Rule 8)
	string_const -> string_const . '.' string_const	(Rule 163)
	string_const -> string_const . '+' string_const	(Rule 164)

	'+'	shift, and go to state 28
	'.'	shift, and go to state 30
	';'	shift, and go to state 29

State 17:

	string -> L_STRING .	(Rule 166)

	$default	reduce using rule 166 (string)

State 18:

	integer -> L_CHARACTER .	(Rule 170)

	$default	reduce using rule 170 (integer)

State 19:

	integer -> L_HEXINTEGER .	(Rule 169)

	$default	reduce using rule 169 (integer)

State 20:

	prototype -> function_prologue ';' .	(Rule 19)

	$default	reduce using rule 19 (prototype)

State 21:

	block -> '{' . @1-1 local_decls @2-3 statement_list '}'	(Rule 23)

	$default	reduce using rule 21 (@1-1)

	@1-1	go to state 31

State 22:

	function -> function_prologue block .	(Rule 20)

	$default	reduce using rule 20 (function)

State 23:

	type_modifier_list -> L_TYPE_MODIFIER type_modifier_list .	(Rule 156)

	$default	reduce using rule 156 (type_modifier_list)

State 24:

	type_specifier -> L_BASIC_TYPE .	(Rule 157)

	$default	reduce using rule 157 (type_specifier)

State 25:

	function_prologue -> type_modifier_list type_specifier . function_declarator	(Rule 18)
	global_decl -> type_modifier_list type_specifier . variable_declarator_list ';'	(Rule 144)

	$default	reduce using rule 159 (star_list)

	variable_declarator_list	go to state 34
	star_list	go to state 33
	function_declarator	go to state 32
	variable_declarator	go to state 35

State 26:

	type_specifier -> L_VOID .	(Rule 158)

	$default	reduce using rule 158 (type_specifier)

State 27:

	string -> string L_STRING .	(Rule 167)

	$default	reduce using rule 167 (string)

State 28:

	string_const -> string_const '+' . string_const	(Rule 164)

	L_CHARACTER	shift, and go to state 18
	L_HEXINTEGER	shift, and go to state 19
	L_INTEGER	shift, and go to state 15
	L_STRING	shift, and go to state 17

	string	go to state 13
	integer	go to state 14
	string_const	go to state 36

State 29:

	inheritance -> L_INHERIT string_const ';' .	(Rule 8)

	$default	reduce using rule 8 (inheritance)

State 30:

	string_const -> string_const '.' . string_const	(Rule 163)

	L_CHARACTER	shift, and go to state 18
	L_HEXINTEGER	shift, and go to state 19
	L_INTEGER	shift, and go to state 15
	L_STRING	shift, and go to state 17

	string	go to state 13
	integer	go to state 14
	string_const	go to state 37

State 31:

	block -> '{' @1-1 . local_decls @2-3 statement_list '}'	(Rule 23)

	$default	reduce using rule 145 (local_decls)

	local_decls	go to state 38

State 32:

	function_prologue -> type_modifier_list type_specifier function_declarator .	(Rule 18)

	$default	reduce using rule 18 (function_prologue)

State 33:

	function_declarator -> star_list . identifier '(' arguments ')'	(Rule 10)
	variable_declarator -> star_list . identifier	(Rule 11)
	star_list -> star_list . '*'	(Rule 160)
	star_list -> star_list . '#'	(Rule 161)

	'#'	shift, and go to state 40
	'*'	shift, and go to state 39
	L_IDENTIFIER	shift, and go to state 41

	identifier	go to state 42

State 34:

	variable_declarator_list -> variable_declarator_list . ',' variable_declarator	(Rule 13)
	global_decl -> type_modifier_list type_specifier variable_declarator_list . ';'	(Rule 144)

	','	shift, and go to state 44
	';'	shift, and go to state 43

State 35:

	variable_declarator_list -> variable_declarator .	(Rule 12)

	$default	reduce using rule 12 (variable_declarator_list)

State 36:

	string_const -> string_const . '.' string_const	(Rule 163)
	string_const -> string_const . '+' string_const	(Rule 164)
	string_const -> string_const '+' string_const .	(Rule 164)

	$default	reduce using rule 164 (string_const)

State 37:

	string_const -> string_const . '.' string_const	(Rule 163)
	string_const -> string_const '.' string_const .	(Rule 163)
	string_const -> string_const . '+' string_const	(Rule 164)

	'+'	shift, and go to state 28

	$default	reduce using rule 163 (string_const)

State 38:

	block -> '{' @1-1 local_decls . @2-3 statement_list '}'	(Rule 23)
	local_decls -> local_decls . local_decl	(Rule 146)

	L_BASIC_TYPE	shift, and go to state 24
	L_VOID	shift, and go to state 26

	$default	reduce using rule 22 (@2-3)

	@2-3	go to state 47
	local_decl	go to state 45
	type_specifier	go to state 46

State 39:

	star_list -> star_list '*' .	(Rule 160)

	$default	reduce using rule 160 (star_list)

State 40:

	star_list -> star_list '#' .	(Rule 161)

	$default	reduce using rule 161 (star_list)

State 41:

	identifier -> L_IDENTIFIER .	(Rule 9)

	$default	reduce using rule 9 (identifier)

State 42:

	function_declarator -> star_list identifier . '(' arguments ')'	(Rule 10)
	variable_declarator -> star_list identifier .	(Rule 11)

	'('	shift, and go to state 48

	$default	reduce using rule 11 (variable_declarator)

State 43:

	global_decl -> type_modifier_list type_specifier variable_declarator_list ';' .	(Rule 144)

	$default	reduce using rule 144 (global_decl)

State 44:

	variable_declarator_list -> variable_declarator_list ',' . variable_declarator	(Rule 13)

	$default	reduce using rule 159 (star_list)

	star_list	go to state 49
	variable_declarator	go to state 50

State 45:

	local_decls -> local_decls local_decl .	(Rule 146)

	$default	reduce using rule 146 (local_decls)

State 46:

	local_decl -> type_specifier . variable_declarator_list_init ';'	(Rule 147)

	$default	reduce using rule 159 (star_list)

	variable_declarator_list_init	go to state 51
	variable_declarator_init	go to state 52
	star_list	go to state 49
	variable_declarator	go to state 53

State 47:

	block -> '{' @1-1 local_decls @2-3 . statement_list '}'	(Rule 23)

	error	shift, and go to state 54

	'!'	reduce using rule 24 (statement_list)
	'$'	reduce using rule 24 (statement_list)
	'('	reduce using rule 24 (statement_list)
	'+'	reduce using rule 24 (statement_list)
	'-'	reduce using rule 24 (statement_list)
	';'	reduce using rule 24 (statement_list)
	'{'	reduce using rule 24 (statement_list)
	'}'	reduce using rule 24 (statement_list)
	'~'	reduce using rule 24 (statement_list)
	L_ARRAY_START	reduce using rule 24 (statement_list)
	L_BREAK	reduce using rule 24 (statement_list)
	L_CASE	reduce using rule 24 (statement_list)
	L_CATCH	reduce using rule 24 (statement_list)
	L_CHARACTER	reduce using rule 24 (statement_list)
	L_COLONCOLON	reduce using rule 24 (statement_list)
	L_CONTINUE	reduce using rule 24 (statement_list)
	L_DEC	reduce using rule 24 (statement_list)
	L_DEFAULT	reduce using rule 24 (statement_list)
	L_DO	reduce using rule 24 (statement_list)
	L_EFUN	reduce using rule 24 (statement_list)
	L_FOR	reduce using rule 24 (statement_list)
	L_FOREACH	reduce using rule 24 (statement_list)
	L_FUNCTION_START	reduce using rule 24 (statement_list)
	L_HEXINTEGER	reduce using rule 24 (statement_list)
	L_IDENTIFIER	reduce using rule 24 (statement_list)
	L_IF	reduce using rule 24 (statement_list)
	L_INC	reduce using rule 24 (statement_list)
	L_INTEGER	reduce using rule 24 (statement_list)
	L_MAP_START	reduce using rule 24 (statement_list)
	L_NIL	reduce using rule 24 (statement_list)
	L_PARAMETER	reduce using rule 24 (statement_list)
	L_RETURN	reduce using rule 24 (statement_list)
	L_RLIMITS	reduce using rule 24 (statement_list)
	L_SSCANF	reduce using rule 24 (statement_list)
	L_STRING	reduce using rule 24 (statement_list)
	L_SWITCH	reduce using rule 24 (statement_list)
	L_TRY	reduce using rule 24 (statement_list)
	L_WHILE	reduce using rule 24 (statement_list)

	statement_list	go to state 55

State 48:

	function_declarator -> star_list identifier '(' . arguments ')'	(Rule 10)

	L_BASIC_TYPE	shift, and go to state 24
	L_VOID	shift, and go to state 60

	$default	reduce using rule 148 (arguments)

	arguments	go to state 56
	type_specifier	go to state 57
	argument_list	go to state 58
	argument	go to state 59

State 49:

	variable_declarator -> star_list . identifier	(Rule 11)
	star_list -> star_list . '*'	(Rule 160)
	star_list -> star_list . '#'	(Rule 161)

	'#'	shift, and go to state 40
	'*'	shift, and go to state 39
	L_IDENTIFIER	shift, and go to state 41

	identifier	go to state 61

State 50:

	variable_declarator_list -> variable_declarator_list ',' variable_declarator .	(Rule 13)

	$default	reduce using rule 13 (variable_declarator_list)

State 51:

	variable_declarator_list_init -> variable_declarator_list_init . ',' variable_declarator_init	(Rule 17)
	local_decl -> type_specifier variable_declarator_list_init . ';'	(Rule 147)

	','	shift, and go to state 63
	';'	shift, and go to state 62

State 52:

	variable_declarator_list_init -> variable_declarator_init .	(Rule 16)

	$default	reduce using rule 16 (variable_declarator_list_init)

State 53:

	variable_declarator_init -> variable_declarator .	(Rule 14)
	variable_declarator_init -> variable_declarator . '=' exp	(Rule 15)

	'='	shift, and go to state 64

	$default	reduce using rule 14 (variable_declarator_init)

State 54:

	statement_list -> error . ';'	(Rule 26)

	';'	shift, and go to state 65

State 55:

	block -> '{' @1-1 local_decls @2-3 statement_list . '}'	(Rule 23)
	statement_list -> statement_list . statement	(Rule 25)

	'!'	shift, and go to state 88
	'$'	shift, and go to state 69
	'('	shift, and go to state 74
	'+'	shift, and go to state 106
	'-'	shift, and go to state 107
	';'	shift, and go to state 78
	'{'	shift, and go to state 21
	'}'	shift, and go to state 81
	'~'	shift, and go to state 116
	L_ARRAY_START	shift, and go to state 97
	L_BREAK	shift, and go to state 99
	L_CASE	shift, and go to state 96
	L_CATCH	shift, and go to state 110
	L_CHARACTER	shift, and go to state 18
	L_COLONCOLON	shift, and go to state 86
	L_CONTINUE	shift, and go to state 84
	L_DEC	shift, and go to state 112
	L_DEFAULT	shift, and go to state 66
	L_DO	shift, and go to state 71
	L_EFUN	shift, and go to state 103
	L_FOR	shift, and go to state 91
	L_FOREACH	shift, and go to state 82
	L_FUNCTION_START	shift, and go to state 113
	L_HEXINTEGER	shift, and go to state 19
	L_IDENTIFIER	shift, and go to state 41
	L_IF	shift, and go to state 102
	L_INC	shift, and go to state 85
	L_INTEGER	shift, and go to state 15
	L_MAP_START	shift, and go to state 68
	L_NIL	shift, and go to state 98
	L_PARAMETER	shift, and go to state 114
	L_RETURN	shift, and go to state 76
	L_RLIMITS	shift, and go to state 79
	L_SSCANF	shift, and go to state 100
	L_STRING	shift, and go to state 17
	L_SWITCH	shift, and go to state 117
	L_TRY	shift, and go to state 115
	L_WHILE	shift, and go to state 95

	lvalue	go to state 87
	arith_exp	go to state 67
	array_exp	go to state 89
	mapping	go to state 90
	compare_exp	go to state 93
	logical_exp	go to state 92
	block	go to state 94
	basic_exp	go to state 70
	array	go to state 101
	prefix_exp	go to state 72
	cond_exp	go to state 73
	string	go to state 75
	closure	go to state 104
	integer	go to state 105
	statement	go to state 77
	postfix_exp	go to state 109
	exp	go to state 108
	list_exp	go to state 111
	function_name	go to state 80
	identifier	go to state 83

State 56:

	function_declarator -> star_list identifier '(' arguments . ')'	(Rule 10)

	')'	shift, and go to state 118

State 57:

	argument -> type_specifier . variable_declarator	(Rule 154)

	$default	reduce using rule 159 (star_list)

	star_list	go to state 49
	variable_declarator	go to state 119

State 58:

	arguments -> argument_list .	(Rule 150)
	arguments -> argument_list . L_ELLIPSIS	(Rule 151)
	argument_list -> argument_list . ',' argument	(Rule 153)

	','	shift, and go to state 120
	L_ELLIPSIS	shift, and go to state 121

	$default	reduce using rule 150 (arguments)

State 59:

	argument_list -> argument .	(Rule 152)

	$default	reduce using rule 152 (argument_list)

State 60:
